vault-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    bigbang.dev/istioVersion: 1.13.2
    cni.projectcalico.org/containerID: 2703cf3addf3bab43162cb6e9b4419035f2a48498e830dac3ca26be32aa99f37
    cni.projectcalico.org/podIP: 10.42.40.61/32
    cni.projectcalico.org/podIPs: 10.42.40.61/32
    kubectl.kubernetes.io/default-container: vault
    kubectl.kubernetes.io/default-logs-container: vault
    kubernetes.io/psp: global-unrestricted-psp
    prometheus.io/path: /stats/prometheus
    prometheus.io/port: "15020"
    prometheus.io/scrape: "true"
    sidecar.istio.io/status: '{"initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-data","istio-podinfo","istio-token","istiod-ca-cert"],"imagePullSecrets":["private-registry"],"revision":"default"}'
  labels:
    app.kubernetes.io/instance: vault-vault
    app.kubernetes.io/name: vault
    component: server
    controller-revision-hash: vault-vault-7c4cb898
    helm.sh/chart: vault-0.19.0-bb.6
    security.istio.io/tlsMode: istio
    service.istio.io/canonical-name: vault
    service.istio.io/canonical-revision: latest
    statefulset.kubernetes.io/pod-name: vault-vault-0
  name: vault-vault-0
  namespace: vault
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchLabels:
            app.kubernetes.io/instance: vault-vault
            app.kubernetes.io/name: vault
            component: server
        topologyKey: kubernetes.io/hostname
  containers:
  - args:
    - proxy
    - sidecar
    - --domain
    - $(POD_NAMESPACE).svc.cluster.local
    - --proxyLogLevel=warning
    - --proxyComponentLogLevel=misc:error
    - --log_output_level=default:info
    - --concurrency
    - "2"
    image: registry1.dso.mil/ironbank/opensource/istio/proxyv2:1.13.2
    lifecycle:
      postStart:
        exec:
          command:
          - pilot-agent
          - wait
    name: istio-proxy
    ports:
    - containerPort: 15090
      name: http-envoy-prom
    readinessProbe:
      failureThreshold: 30
      httpGet:
        path: /healthz/ready
        port: 15021
      initialDelaySeconds: 1
      periodSeconds: 2
      timeoutSeconds: 3
    resources:
      limits:
        cpu: 100m
        memory: 256Mi
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
      privileged: false
      readOnlyRootFilesystem: true
      runAsGroup: 1337
      runAsNonRoot: true
      runAsUser: 1337
    volumeMounts:
    - mountPath: /var/run/secrets/istio
      name: istiod-ca-cert
    - mountPath: /var/lib/istio/data
      name: istio-data
    - mountPath: /etc/istio/proxy
      name: istio-envoy
    - mountPath: /var/run/secrets/tokens
      name: istio-token
    - mountPath: /etc/istio/pod
      name: istio-podinfo
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-fsz4k
      readOnly: true
  - args:
    - "cp /vault/config/extraconfig-from-values.hcl /tmp/storageconfig.hcl;\n[ -n
      \"${HOST_IP}\" ] && sed -Ei \"s|HOST_IP|${HOST_IP?}|g\" /tmp/storageconfig.hcl;\n[
      -n \"${POD_IP}\" ] && sed -Ei \"s|POD_IP|${POD_IP?}|g\" /tmp/storageconfig.hcl;\n[
      -n \"${HOSTNAME}\" ] && sed -Ei \"s|HOSTNAME|${HOSTNAME?}|g\" /tmp/storageconfig.hcl;\n[
      -n \"${API_ADDR}\" ] && sed -Ei \"s|API_ADDR|${API_ADDR?}|g\" /tmp/storageconfig.hcl;\n[
      -n \"${TRANSIT_ADDR}\" ] && sed -Ei \"s|TRANSIT_ADDR|${TRANSIT_ADDR?}|g\" /tmp/storageconfig.hcl;\n[
      -n \"${RAFT_ADDR}\" ] && sed -Ei \"s|RAFT_ADDR|${RAFT_ADDR?}|g\" /tmp/storageconfig.hcl;\n/usr/local/bin/docker-entrypoint.sh
      vault server -config=/tmp/storageconfig.hcl \n"
    command:
    - /bin/sh
    - -ec
    image: registry1.dso.mil/ironbank/hashicorp/vault/vault:1.9.4
    lifecycle:
      preStop:
        exec:
          command:
          - /bin/sh
          - -c
          - sleep 5 && kill -SIGTERM $(pidof vault)
    name: vault
    ports:
    - containerPort: 8200
      name: https
    - containerPort: 8201
      name: https-internal
    - containerPort: 8202
      name: https-rep
    readinessProbe:
      exec:
        command:
        - /bin/sh
        - -ec
        - vault status -tls-skip-verify
      failureThreshold: 2
      initialDelaySeconds: 5
      periodSeconds: 5
      timeoutSeconds: 3
    resources:
      limits:
        cpu: "2"
        memory: 8Gi
    securityContext:
      allowPrivilegeEscalation: false
    volumeMounts:
    - mountPath: /vault/audit
      name: audit
    - mountPath: /vault/data
      name: data
    - mountPath: /vault/config
      name: config
    - mountPath: /vault/userconfig/vault-server-tls
      name: userconfig-vault-server-tls
      readOnly: true
    - mountPath: /home/vault
      name: home
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-fsz4k
      readOnly: true
  hostname: vault-vault-0
  imagePullSecrets:
  - name: private-registry
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  securityContext:
    fsGroup: 1337
    runAsGroup: 1000
    runAsNonRoot: true
    runAsUser: 100
  serviceAccountName: vault-vault
  subdomain: vault-vault-internal
  terminationGracePeriodSeconds: 10
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - emptyDir:
      medium: Memory
    name: istio-envoy
  - name: istio-data
  - downwardAPI:
      items:
      - fieldRef:
          fieldPath: metadata.labels
        path: labels
      - fieldRef:
          fieldPath: metadata.annotations
        path: annotations
    name: istio-podinfo
  - name: istio-token
    projected:
      sources:
      - serviceAccountToken:
          audience: istio-ca
          expirationSeconds: 43200
          path: istio-token
  - configMap:
      name: istio-ca-root-cert
    name: istiod-ca-cert
  - name: audit
    persistentVolumeClaim:
      claimName: audit-vault-vault-0
  - name: data
    persistentVolumeClaim:
      claimName: data-vault-vault-0
  - configMap:
      name: vault-vault-config
    name: config
  - name: userconfig-vault-server-tls
    secret:
      secretName: vault-server-tls
  - name: home
  - name: kube-api-access-fsz4k
    projected:
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              fieldPath: metadata.namespace
            path: namespace
